Fix repo structure for Docker build

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -23,7 +23,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t oluwaloseye/ecommerce-site:latest .
+        run: docker build -t oluwaloseye/ecommerce-site:latest "./E-COMMERCE WEBSITE"
 
       - name: Push Docker image
         run: docker push oluwaloseye/ecommerce-site:latest
