--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,9 +1,9 @@
-name: Build and Push Docker Image
+name: Docker Build and Push
 
 on:
   push:
     branches:
-      - main
+      - main   # Run workflow only when pushing to main branch
 
 jobs:
   build:
@@ -13,17 +13,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: List files in repo
-        run: ls -R
-
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
-        run: docker build -t oluwaloseye/ecommerce-site:latest "./E-COMMERCE WEBSITE"
-
-      - name: Push Docker image
-        run: docker push oluwaloseye/ecommerce-site:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: oluwaloseye/ecommerce-site:latest
